Fix updating screening's seats reservations
Fixed a bug where during booking a seat, reserved seats wouldnt be
updated allowing overbooking, fixed displaying date in screenings and
reservation components(one day and month difference in some cases).Fixed
out of bounds error for reserving seats

--- a/client/src/style/styles.css
+++ b/client/src/style/styles.css
@@ -395,7 +395,7 @@ hr{
     z-index: 1;
     transition: all 2s ease;
     border-style: solid;
-    background-color: rgba(53, 68, 64, 0.97);
+    background-color: rgba(53, 68, 64, 0.95);
     color: white;
     border-color: rgb(53, 68, 64);
     padding: 1rem;
